@@ -11,54 +11,66 @@ import javafx.scene.control.ComboBox;
 import javafx.scene.control.Label;
 import javafx.scene.layout.GridPane;
 import javafx.scene.layout.HBox;
+import javafx.scene.layout.Priority;
 import javafx.scene.layout.Region;
 import javafx.scene.layout.VBox;
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+import negocio.BOs.IPedidoBO;
+import negocio.excepciones.NegocioException;
+import negocio.fabrica.FabricaBOs;
+import persistencia.dominio.DetallePedido;
+import persistencia.dominio.Pedido;
 
 public class MisPedidosController {
 
-    @FXML
-    private GridPane gridPedidos;
+    @FXML private GridPane gridPedidos;
+    @FXML private ComboBox<String> cmbTipoPedido;
 
-    @FXML
-    private ComboBox<String> cmbTipoPedido;
-
-    private record Pedido(String numero, String estado, String fecha, String[] items, String total, boolean esExpress, String tiempoRestante) {}
-
-    private final List<Pedido> pedidos = new ArrayList<>();
+    private List<Pedido> pedidosBD;
+    private IPedidoBO pedidoBO;
 
     @FXML
     private void initialize() {
-        cmbTipoPedido.getItems().addAll("Todos", "Listo", "Pendiente", "Express", "Cancelado");
+        cmbTipoPedido.getItems().addAll("Todos", "Listo", "Pendiente", "Entregado", "Cancelado");
         cmbTipoPedido.setValue("Todos");
 
-        pedidos.add(new Pedido("#00123", "Listo",     "12/02/2026",
-                new String[]{"Enpanada de Arandanos X2", "Croisant  x2"}, "$35.00", false, null));
-        pedidos.add(new Pedido("#00124", "Pendiente", "16/02/2026",
-                new String[]{"Concha de Vainilla  X2", "Dona de Chocolate X1"}, "$40.00", false, null));
-        pedidos.add(new Pedido("Express", "Express",  "05/02/2026",
-                new String[]{"Dona de Chocolate X1"}, "$15.00", true, "19:55"));
-        pedidos.add(new Pedido("#00123", "Cancelado", "02/02/2026",
-                new String[]{"Dona de Chocolate X1", "Croisant  x1"}, "$35.00", false, null));
+        pedidoBO = FabricaBOs.obtenerPedidoBO();
+        cargarPedidos();
+    }
 
-        renderizarPedidos(pedidos);
+    private void cargarPedidos() {
+        if (!SesionActual.isLogeado() || SesionActual.getCliente() == null) {
+            mostrarError("No hay sesión activa de cliente.");
+            return;
+        }
+
+        try {
+            int idCliente = SesionActual.getCliente().getIdUsuario();
+            pedidosBD = pedidoBO.obtenerHistorial(idCliente);
+            renderizarPedidos(pedidosBD);
+        } catch (NegocioException e) {
+            e.printStackTrace();
+            mostrarError("No se pudieron cargar los pedidos: " + e.getMessage());
+        }
     }
 
     private void renderizarPedidos(List<Pedido> lista) {
         gridPedidos.getChildren().clear();
-        int col = 0;
-        int row = 0;
+        if (lista == null || lista.isEmpty()) {
+            Label vacio = new Label("No tienes pedidos aún.");
+            vacio.setStyle("-fx-font-size: 14px; -fx-text-fill: #6b5644;");
+            gridPedidos.add(vacio, 0, 0);
+            return;
+        }
+
+        int col = 0, row = 0;
         for (Pedido p : lista) {
-            VBox tarjeta = crearTarjetaPedido(p);
-            gridPedidos.add(tarjeta, col, row);
+            gridPedidos.add(crearTarjetaPedido(p), col, row);
             col++;
-            if (col >= 2) {
-                col = 0;
-                row++;
-            }
+            if (col >= 2) { col = 0; row++; }
         }
     }
 
@@ -69,65 +81,58 @@ public class MisPedidosController {
         tarjeta.setStyle("-fx-background-color: white; -fx-background-radius: 12;"
                 + " -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.12), 6, 0, 0, 2);");
 
-        // Encabezado: número + badge estado
         HBox encabezado = new HBox(10);
         encabezado.setAlignment(Pos.CENTER_LEFT);
-
-        Label lblNumero = new Label("Pedido " + p.numero());
+        Label lblNumero = new Label("Pedido #" + p.getNumPedido());
         lblNumero.setStyle("-fx-font-size: 14px; -fx-font-weight: bold; -fx-text-fill: #3a2a1a;");
-
-        Label badge = crearBadge(p.estado());
+        Label badge = crearBadge(p.getEstado().getDescripcion());
         Region spacer = new Region();
-        HBox.setHgrow(spacer, javafx.scene.layout.Priority.ALWAYS);
+        HBox.setHgrow(spacer, Priority.ALWAYS);
         encabezado.getChildren().addAll(lblNumero, spacer, badge);
 
-        // Fecha
-        HBox filafecha = new HBox(6);
-        filafecha.setAlignment(Pos.CENTER_LEFT);
+        HBox filaFecha = new HBox(6);
+        filaFecha.setAlignment(Pos.CENTER_LEFT);
         Label iconFecha = new Label("📅");
         iconFecha.setStyle("-fx-font-size: 11px;");
-        Label lblFecha = new Label(p.fecha());
+        String fechaStr = p.getFechaRegistro() != null
+                ? p.getFechaRegistro().toLocalDateTime().toLocalDate().toString() : "—";
+        Label lblFecha = new Label(fechaStr);
         lblFecha.setStyle("-fx-font-size: 12px; -fx-text-fill: #6b5644;");
+        filaFecha.getChildren().addAll(iconFecha, lblFecha);
 
-        if (p.esExpress() && p.tiempoRestante() != null) {
-            Region sp2 = new Region();
-            HBox.setHgrow(sp2, javafx.scene.layout.Priority.ALWAYS);
-            Label lblTimer = new Label(p.tiempoRestante());
-            lblTimer.setStyle("-fx-font-size: 13px; -fx-font-weight: bold; -fx-text-fill: #3a2a1a;"
-                    + " -fx-background-color: #e0e0e0; -fx-background-radius: 6; -fx-padding: 2 8;");
-            filafecha.getChildren().addAll(iconFecha, lblFecha, sp2, lblTimer);
-        } else {
-            filafecha.getChildren().addAll(iconFecha, lblFecha);
-        }
-
-        // Items
         VBox itemsBox = new VBox(3);
-        for (String item : p.items()) {
-            HBox fila = new HBox(6);
-            Label punto = new Label("●");
-            punto.setStyle("-fx-font-size: 8px; -fx-text-fill: #4a3a2a;");
-            Label lbl = new Label(item);
-            lbl.setStyle("-fx-font-size: 12px; -fx-text-fill: #3a2a1a;");
-            fila.setAlignment(Pos.CENTER_LEFT);
-            fila.getChildren().addAll(punto, lbl);
-            itemsBox.getChildren().add(fila);
+        List<DetallePedido> detalles = cargarDetalles(p.getIdPedido());
+        if (detalles.isEmpty()) {
+            Label sinItems = new Label("Sin productos registrados.");
+            sinItems.setStyle("-fx-font-size: 12px; -fx-text-fill: #9e9e9e;");
+            itemsBox.getChildren().add(sinItems);
+        } else {
+            for (DetallePedido d : detalles) {
+                HBox fila = new HBox(6);
+                Label punto = new Label("●");
+                punto.setStyle("-fx-font-size: 8px; -fx-text-fill: #4a3a2a;");
+                String nombreProducto = d.getProducto() != null ? d.getProducto().getNombre() : "Producto";
+                Label lbl = new Label(nombreProducto + " x" + d.getCantidad());
+                lbl.setStyle("-fx-font-size: 12px; -fx-text-fill: #3a2a1a;");
+                fila.setAlignment(Pos.CENTER_LEFT);
+                fila.getChildren().addAll(punto, lbl);
+                itemsBox.getChildren().add(fila);
+            }
         }
 
-        // Separador y total
         Region sep = new Region();
         sep.setPrefHeight(1);
         sep.setStyle("-fx-background-color: #e0d0b0;");
 
         HBox filaTotal = new HBox();
         filaTotal.setAlignment(Pos.CENTER_LEFT);
-        Label lblTotal = new Label("Total:  " + p.total());
+        Label lblTotal = new Label(String.format("Total:  $%.2f", p.getTotal()));
         lblTotal.setStyle("-fx-font-size: 13px; -fx-font-weight: bold; -fx-text-fill: #3a2a1a;");
         filaTotal.getChildren().add(lblTotal);
 
-        tarjeta.getChildren().addAll(encabezado, filafecha, itemsBox, sep, filaTotal);
+        tarjeta.getChildren().addAll(encabezado, filaFecha, itemsBox, sep, filaTotal);
 
-        // Botón cancelar solo para pedidos pendientes
-        if ("Pendiente".equals(p.estado())) {
+        if (p.getEstado() == Pedido.EstadoPedido.PENDIENTE) {
             Button btnCancelar = new Button("Cancelar");
             btnCancelar.setStyle("-fx-background-color: #e05a5a; -fx-text-fill: white;"
                     + " -fx-font-size: 12px; -fx-font-weight: bold;"
@@ -142,6 +147,14 @@ public class MisPedidosController {
         return tarjeta;
     }
 
+    private List<DetallePedido> cargarDetalles(int idPedido) {
+        try {
+            return pedidoBO.obtenerDetallesPorPedido(idPedido);
+        } catch (NegocioException e) {
+            return List.of();
+        }
+    }
+
     private Label crearBadge(String estado) {
         Label badge = new Label(estado);
         badge.setStyle("-fx-font-size: 11px; -fx-font-weight: bold;"
@@ -152,11 +165,12 @@ public class MisPedidosController {
 
     private String colorEstado(String estado) {
         return switch (estado) {
-            case "Listo"     -> "#4caf50";
-            case "Pendiente" -> "#2196f3";
-            case "Express"   -> "#f39c12";
-            case "Cancelado" -> "#9e9e9e";
-            default          -> "#757575";
+            case "Listo"        -> "#4caf50";
+            case "Pendiente"    -> "#2196f3";
+            case "Entregado"    -> "#4caf50";
+            case "Cancelado"    -> "#9e9e9e";
+            case "No Entregado" -> "#e05a5a";
+            default             -> "#757575";
         };
     }
 
@@ -164,35 +178,33 @@ public class MisPedidosController {
         Alert confirm = new Alert(AlertType.CONFIRMATION);
         confirm.setTitle("Cancelar pedido");
         confirm.setHeaderText(null);
-        confirm.setContentText("¿Estás seguro de que desea cancelar el pedido?");
+        confirm.setContentText("¿Estás seguro de que deseas cancelar el pedido #" + p.getNumPedido() + "?");
 
-        Button btnAceptar = (Button) confirm.getDialogPane().lookupButton(ButtonType.OK);
-        btnAceptar.setText("Aceptar");
-        btnAceptar.setStyle("-fx-background-color: #e05a5a; -fx-text-fill: white;"
-                + " -fx-font-weight: bold; -fx-background-radius: 6;");
-
-        Button btnCancelar = (Button) confirm.getDialogPane().lookupButton(ButtonType.CANCEL);
-        btnCancelar.setText("Cancelar");
-        btnCancelar.setStyle("-fx-background-radius: 6;");
+        Button btnOK = (Button) confirm.getDialogPane().lookupButton(ButtonType.OK);
+        btnOK.setText("Cancelar pedido");
+        btnOK.setStyle("-fx-background-color: #e05a5a; -fx-text-fill: white; -fx-font-weight: bold;");
 
         Optional<ButtonType> result = confirm.showAndWait();
         if (result.isPresent() && result.get() == ButtonType.OK) {
-            pedidos.remove(p);
-            pedidos.add(new Pedido(p.numero(), "Cancelado", p.fecha(),
-                    p.items(), p.total(), false, null));
-            handleAplicarFiltros();
+            try {
+                pedidoBO.cancelarPedido(p.getIdPedido());
+                cargarPedidos();
+            } catch (NegocioException e) {
+                mostrarError("No se pudo cancelar: " + e.getMessage());
+            }
         }
     }
 
     @FXML
     private void handleAplicarFiltros() {
+        if (pedidosBD == null) return;
         String filtro = cmbTipoPedido.getValue();
         if (filtro == null || "Todos".equals(filtro)) {
-            renderizarPedidos(pedidos);
+            renderizarPedidos(pedidosBD);
         } else {
-            List<Pedido> filtrados = pedidos.stream()
-                    .filter(p -> filtro.equals(p.estado()))
-                    .toList();
+            List<Pedido> filtrados = pedidosBD.stream()
+                    .filter(p -> p.getEstado().getDescripcion().equals(filtro))
+                    .collect(Collectors.toList());
             renderizarPedidos(filtrados);
         }
     }
@@ -202,11 +214,13 @@ public class MisPedidosController {
         try {
             App.setRoot("bienvenida");
         } catch (IOException e) {
-            Alert alert = new Alert(AlertType.ERROR);
-            alert.setTitle("Error");
-            alert.setHeaderText("Error al regresar");
-            alert.setContentText("No se pudo volver a la pantalla de bienvenida.");
-            alert.showAndWait();
+            mostrarError("No se pudo volver.");
         }
+    }
+
+    private void mostrarError(String msg) {
+        Alert alert = new Alert(AlertType.ERROR);
+        alert.setTitle("Error"); alert.setHeaderText(null);
+        alert.setContentText(msg); alert.showAndWait();
     }
 }
